# FastenerGen

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: main.py
backend/app/ai/: designer.py  drawing_reader.py  embeddings.py  fewshot.py  process_designer.py  quality.py  rag.py  reasoning.py  verification.py
backend/app/api/: deps.py
backend/app/calibration/: __init__.py  dataset.py  report.py  teacher_rationale.py
backend/app/core/: anthropic_client.py  config.py  env.py  exceptions.py  logging.py
backend/app/data/: ingestion.py  schemas.py  synthetic.py
backend/app/drawings/: generator.py  parser.py  process_forming_generator.py  standards.py
backend/app/eval/: drawing_eval.py  experiment_report.py  golden_set.py  judge.py  metrics.py  regression.py
backend/app/geometry/: assembly.py  die_templates.py  exporter.py  numpy_templates.py  profiles.py  projector.py  punch_templates.py  workpiece.py
backend/app/knowledge/: feature_index.json  loader.py
backend/app/search/: __init__.py  candidate.py  constraints.py  family_matcher.py  features.py  generator.py  operations.py
backend/experiments/factory_calibration/: batch_calibration_report.json  batch_calibration_report.md  batch_manifest.json  prediction_map.json
backend/experiments/m14_holdout/: manifest.json
backend/experiments/square_t_cap_holdout/: manifest.json
backend/experiments/standard_case_intake/: manifest.json
backend/scripts/: batch_extract_gong_chapter8.py  batch_pseudo_reasoning.py  build_batch_calibration_report.py  build_batch_manifest.py  build_calibration_dataset.py  build_calibration_report.py  build_feature_index.py  build_standard_case_intake.py  convert_dwg_to_dxf.py  enrich_process_profiles.py  export_teacher_rationale.py  export_teacher_rationales.py  extract_case_from_drawing.py  extract_standard_cases_offline.py  extract_textbook_knowledge.py  generate_synthetic.py  ingest_textbook_pdfs.py  ocr_standard_case_intake.py  ocr_textbook_pages.py  render_drawings_to_png.py  run_gong_experiment.py  seed_rag.py  summarize_batch_calibration.py  validate_process_renderer.py
backend/tests/: conftest.py  test_health.py  test_schemas.py  test_synthetic.py
backend/tests/ai/: test_reasoning.py
backend/tests/api/: test_core_surface.py
backend/tests/calibration/: __init__.py  test_batch_calibration_report.py  test_calibration_report.py  test_cli_batch_calibration_report.py  test_cli_build_batch_manifest.py  test_cli_build_calibration_dataset.py  test_cli_calibration_report.py  test_cli_export_teacher_rationales.py  test_cli_extract_standard_cases_offline.py  test_cli_standard_case_intake.py  test_cli_summarize_batch_calibration.py  test_cli_teacher_rationale.py  test_eval_dataset.py  test_teacher_rationale_generation.py  test_teacher_rationale_metrics.py
backend/tests/core/: test_anthropic_client.py
backend/tests/drawings/: test_dxf_quality.py  test_generator.py  test_parser.py
backend/tests/eval/: test_experiment_report.py
backend/tests/geometry/: test_templates.py  test_workpiece_assembly.py
backend/tests/integration/: test_full_pipeline.py
backend/tests/knowledge/: test_loader_holdout.py
backend/tests/search/: test_candidate.py  test_constraints.py  test_family_matcher.py  test_features.py  test_generator.py  (+1 more)
(+171 files in other folders)
