[project]
name = "fastenergpt-backend"
version = "0.1.0"
description = "FastenerGPT backend — AI-powered die design for cold-heading fasteners"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    # AI / LLM
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "voyageai>=0.3.0",
    # Data layer
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "chromadb>=0.6.0",
    "redis>=5.2.0",
    # Drawing / Geometry
    "ezdxf>=1.3.0",
    "matplotlib>=3.9.0",
    "trimesh>=4.5.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # Utilities
    "python-jose[cryptography]>=3.3.0",
    "boto3>=1.35.0",
    "tqdm>=4.67.0",
    "pypdfium2>=4.30.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
cad = [
    "cadquery>=2.4.0",
]

dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "aiosqlite>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "aiosqlite>=0.21.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
